Resolves: tdf#154627 RANK() query value not in data must return error

For all RANK(), RANK.EQ(), RANK.AVG().
Also, use #N/A NotAvailable instead of #VALUE! NoValue.

This made it necessary to adapt sc/qa/unit/data/ods/functions.ods and
result check that had a totally senseless query value with arbitrary
results.

Change-Id: If835b5ed49caf16a813b4ea897e1d7dd1aa02954
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150067
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins